fix: fix flag alignment - country page

--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -222,6 +222,7 @@ ul {
 
         &__flag {
             max-width: 600px;
+            align-self: center;
         }
 
         &__details {
